--- a/Password.css
+++ b/Password.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background: linear-gradient(to right, black 50%, #2c3e50 50%);
-    background-size: 100% 100%; /* Full coverage, no need for animation */
+    background-size: 100% 100%; 
     color: #fff;
     margin: auto;
     padding: 0;
@@ -18,7 +18,7 @@ h1 {
     text-align: center;
     position: relative;
     top: -250px;
-    left: 573px;
+    left: 565px;
 }
 
 table {
@@ -31,35 +31,57 @@ table {
     font-size: 20px;
     margin: auto; 
     position: relative;
-    right: 515px;
+    right: 525px;
 }
 
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"], input[type="username"] {
     width: 100%;
-    padding: 10px;
+    padding: 15px;
     border: 2px solid #1abc9c;
     background-color: #34495e;
     color: #ecf0f1;
     font-size: 16px;
+    display: block;
     margin-bottom: 20px;
+    font-weight: bold;
 }
 
-input[type="button"], input[type="reset"] {
+input[type="button"], input[type="reset"], input[type="submit"] {
     padding: 20px;
     background-color: #1abc9c;
     border: none;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
-    margin: 0 10px;
+    margin: 0 20px;
     align-items: center;
     display: flex;
     justify-content: center;
     flex-direction: column;
     position: relative;
-    left: 100px;
+    left: 60px;
 }
 
-input[type="button"]:hover, input[type="reset"]:hover {
+input[type="button"]:hover, input[type="reset"]:hover, input[type="submit"]:hover {
     background-color: #16a085;
+}
+
+.error-message {
+    color: red;
+    font-size: 12px;
+    display: block;
+    margin-top: 5px; 
+    text-align: center;  /* Center the text */
+    width: 100%;         /* Ensure it takes the full width of the parent cell */
+    max-width: 400px;    /* Set a maximum width */
+    margin-left: auto;   /* Center horizontally */
+    margin-right: auto;  /* Center horizontally */
+}
+
+.success-message {
+    color: green;
+    font-size: 14px;
+    text-align: center;
+    display: block;
+    margin-top: 10px;
 }
